# aargal

./: Cargo.toml  READEME.md  README.md  aargal.dev.toml
.github/workflows/: build.yml  release.yml
.github/workflows/reusable/: build-job.yml
docs/: architecture.md  ci-cd.md  complete_readme.md  configuration.md  doctor.md  fail2ban.md  installation.md  local-testing.md  service.md
packaging/systemd/: aargal.service
scripts/: install.sh
src/: lib.rs  main.rs
src/config/: config.rs  loader.rs  mod.rs  schema.rs
src/doctor/: checks.rs  mod.rs  report.rs
src/engine/: action.rs  decision.rs  mod.rs  pipeline.rs  scoring.rs
src/ingest/: file.rs  mod.rs  stdin.rs
src/model/: ip_state.rs  mod.rs  state_store.rs
src/output/: executor.rs  fail2ban.rs  log.rs  mod.rs  stdout.rs
src/parser/: mod.rs  nginx.rs
