[package]
name = "aargal"
version = "0.1.0"
edition = "2021"
description = "Aargal — Lightweight scraper detection and request barrier for self-hosted servers"
license = "Apache-2.0 OR MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
toml = "0.8"
